--- a/index.html
+++ b/index.html
@@ -5,30 +5,29 @@ background_image_path:
 large_header: true
 testimonials:
   - message: >-
-      We use Justice Law in all our endeavours. They offer an unparalleled
-      service when it comes to running a business.
+      We use Bengi Law in all our endeavours. They offer an unparalleled service
+      when it comes to running a business.
     image: https://placekitten.com/g/60/60?a=.png
-    name: Joice Carmold
+    name: Mahmoud Caddy
   - message: >-
-      Justice Law are the best of the best. Being local, they care about people
+      Bengi Law are the best of the best. Being local, they care about people
       and have strong ties to the community.
     image: /apple-touch-icon.png
-    name: Peter Rottenburg
+    name: Jan Peter Deterjan
   - message: >-
-      Justice Law were everything we could have hoped for when buying our first
+      Bengi Law were everything we could have hoped for when buying our first
       home. Highly recommended to all.
     image: https://placebear.com/60/60?a=.png
-    name: D. and G. Gibbleston
+    name: D. and G. Attimtuttidaa
 _options:
   image:
     width: 60
     height: 60
 ---
 <div class="editable">
-	<p>This is the <strong>Justice</strong> template from <a href="https://cloudcannon.com/">CloudCannon</a>. Justice is strong foundation for the web presence of a law firm or business. It's filled with fictitious example content to get you started.</p>
-
-	<p>Justice Law is professional representation. Practicing for over 50 years, our team have the knowledge and skills to get you results.</p>
-</div>
+		<p>This is the <strong>Bengi Law </strong>web page drafted by <a href="https://github.com/burakbengi">burakbengi</a>. It allows a strong foundation for the web presence of the law firm and filled with fictitious example content to get you started.</p>
+		<p>Bengi Law is professional representation. Practicing for over 50 years, our team have the knowledge and skills to get you results.</p>
+	</div>
 
 <div class="testimonials">
 	{% for testimonial in page.testimonials %}
