Updated 2 files via CloudCannon.

--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,10 @@ large_header: false
 show_in_navigation: true
 navigation_order: 3
 map:
-  latitude: -45.8787605
-  longitude: 170.5027976
+  latitude: 41.06163118044665
+  longitude: 28.987000449522753
   zoom: 13
 ---
-
 <p class="editable">
 	Come see us in person, give us a call, or send us a message with your details and we'll be in contact shortly after. No obligations and your first meeting is free.
 </p>
@@ -34,18 +33,18 @@ map:
 	<div class="column">
 		<form method="post" action="/contact-success/">
 			<label for="email_address">Email Address</label>
-			<input id="email_address"type="text" name="email">
+			<input id="email_address" type="text" name="email" />
 
 			<label for="name">Name</label>
-			<input id="name" type="text" name="name">
+			<input id="name" type="text" name="name" />
 
 			<label for="message">Message</label>
 			<textarea id="message" name="message"></textarea>
 
-			<input type="hidden" name="_to" value="{{ site.data.company.contact_email_address }}">
-			<input type="text" name="_gotcha" style="display: none;">
+			<input type="hidden" name="_to" value="{{ site.data.company.contact_email_address }}" />
+			<input type="text" name="_gotcha" style="display: none;" />
 
-			<input type="submit" value="Send Message">
+			<input type="submit" value="Send Message" />
 		</form>
 	</div>
 </div>
