--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 title: Contact
-call_to_action: Map
+call_to_action: Blog
 background_image_path:
 large_header: false
 show_in_navigation: true
