Updated 1 file via CloudCannon.

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,10 @@ map:
 
 			<input type="hidden" name="_to" value="{{ site.data.company.contact_email_address }}" />
 			<input type="text" name="_gotcha" style="display: none;" />
+			
+			<div class="h-captcha" data-sitekey="0442da0f-0ebb-4a28-a631-8d07256866e1"></div>
+			<script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+			<br />
 
 			<input type="submit" value="Send Message" />
 		</form>
