--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@ show_in_navigation: true
 navigation_order: 1
 ---
 <div class="editable">
-		<p>Serving your community for over a century, Bengi Law is committed to helping people through a number of services. Our services range from conveyancing, mortgages to family law. Our clients range from large businesses to first home buyers.</p>
+		<p>Bengi Law is a new generation independent law firm based in Istanbul - Turkey, powered by a multinational legal expertise and technology driven mind-set.</p>
+		<p>We provide tailor-made legal solutions to our clients in Banking&amp; Finance, Capital Markets, Competition, Compliance, Corporate Maintenance, Dispute Resolution, Employment, Energy, Intellectual Property, Mergers &amp; Acquisitions, Real Estate and Technology related matters.</p>
 		<p>Meet the members of our capable team:</p>
 	</div>
 
