--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title:
 call_to_action: Contact
-background_image_path: /uploads/levent-istanbul-at-night.jpg
+background_image_path: /uploads/building.jpg
 large_header: true
 testimonials:
   - message: >-
